--- a/smartHome-flat1/src/main/resources/README
+++ b/smartHome-flat1/src/main/resources/README
@@ -1,2 +1,4 @@
 *** Radio ***
 	- zatial iba ako main metoda ktora vyhlada stanice
+19.5.2020
+-pridany spring boot a jeho controller /radio pre volanie radia
